Fixed spacing issues with the business home page

--- a/app/assets/stylesheets/_hero.scss
+++ b/app/assets/stylesheets/_hero.scss
@@ -50,10 +50,10 @@
   }
 }
 .hero-business {
-  background: $purple-2 url("https://s3-eu-west-1.amazonaws.com/learnsignal3-production/public/business-home-1001.png") 50% 0 no-repeat;
+  background: $purple-5 url("https://s3-eu-west-1.amazonaws.com/learnsignal3-production/public/business-home-1001.png") 50% 0 no-repeat;
   color: $white;
   @include breakpoint(md-min) {
-    background: $purple-2 url("https://s3-eu-west-1.amazonaws.com/learnsignal3-production/public/business-home-1001.png") no-repeat;
+    background: $purple-5 url("https://s3-eu-west-1.amazonaws.com/learnsignal3-production/public/business-home-1001.png") no-repeat;
     background-size: cover;
   }
 }
